[package]
name = "twilio-async"
version = "0.2.0"
description = """
An async and ergonomic wrapper around Twilio API & TwiML
"""
readme = "README.md"
repository = "https://github.com/leshow/twilio"
license = "MIT"
keywords = ["twilio", "twiml", "api", "async", "hyper"]
categories = ["network-programming", "api-bindings", "web-programming", "development-tools"]
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"

[workspace]
members = ["./", "twiml"]

[dependencies]
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
hyper-tls = "0.4.0-alpha.4"
typed-headers = "0.1"
http = "0.1"
url = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-preview = "0.3.0-alpha.19"
async-trait = "0.1"
twiml =  { version = "0.2", path = "twiml" }

[dev-dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio/" }

[[example]]
name = "runtime"
path = "examples/runtime.rs"
