[package]
name = "twilio-async"
version = "0.3.0"
description = """
An async and ergonomic wrapper around Twilio API & TwiML
"""
readme = "README.md"
repository = "https://github.com/leshow/twilio"
license = "MIT"
keywords = ["twilio", "twiml", "api", "async", "hyper"]
categories = ["network-programming", "api-bindings", "web-programming", "development-tools"]
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"

[workspace]
members = ["./", "twiml"]

[dependencies]
async-trait = "0.1"
bytes = "0.5"
hyper = { version = "0.13", features = ["stream"] }
hyper-tls = "0.4"
typed-headers = "0.2"
http = "0.2"
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twiml =  { version = "0.2", path = "twiml" }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }

[[example]]
name = "runtime"
path = "examples/runtime.rs"
