[package]
name = "twilio-async"
version = "0.5.0"
description = """
An async and ergonomic wrapper around Twilio API & TwiML
"""
readme = "README.md"
repository = "https://github.com/leshow/twilio"
documentation = "https://docs.rs/tokio/0.4.1/twilio-async/"
license = "MIT"
keywords = ["twilio", "twiml", "api", "async", "hyper"]
categories = ["network-programming", "api-bindings", "web-programming", "development-tools"]
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"

[workspace]
members = ["./", "twiml"]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
hyper = { version = "0.14", features = ["stream", "client", "http1", "http2"] }
hyper-tls = "0.5"
typed-headers = "0.2"
http = "0.2"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twiml =  { version = "0.3", path = "twiml" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "runtime"
path = "examples/runtime.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]